Fix the issue that carrot is covered by the text when select period

--- a/app/styles/components/_metrics.scss
+++ b/app/styles/components/_metrics.scss
@@ -1,5 +1,9 @@
 $accordion-border: darken($bg-default, 5) !default;
 
+.period {
+  width: 120px;
+}
+
 .graph-area {
   height: 200px
 }
